tests/invalidTest/other/repeated_name_int_global.q
# EXPECT repeated variable name
sint64 i
def sint64 errorTest(){
    uint32 i
}